hphp/test/zend/bad/ext-spl/heap_top_variation_003.php
<?php
$h = new SplMinHeap();
try {
	$h->top();
} catch (Exception $e) {
	echo $e->getMessage();
}
?>